// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem - current + marker 1`] = `
.c2 {
  color: #262D33;
  margin-right: 0.5rem;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover .c3 {
  color: #C1C6CC;
}

.c4 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  background-color: #F5F6F7;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: #262D33;
  padding-left: calc(1rem - 4px);
}

.c0:focus-within button,
.c0:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c0 .c3 {
  color: #262D33;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  aria-current="page"
  bg="#F5F6F7"
  className="c0"
  color="#262D33"
  fontSize="small"
  fontWeight="bold"
>
  <button
    className="c1"
    role="menuitem"
  >
    <div
      className="c2 c3 "
      color="#262D33"
      size={20}
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          Home
        </title>
        <path
          d="M12 5.69l5 4.5V18h-2v-6H9v6H7V10.19l5-4.5zM12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
          fill="currentColor"
        />
      </svg>
    </div>
    who!
  </button>
</li>
`;

exports[`MenuItem - current 1`] = `
.c2 {
  color: #262D33;
  margin-right: 0.5rem;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover .c3 {
  color: #C1C6CC;
}

.c4 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  background-color: #F5F6F7;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: #262D33;
  padding-left: calc(1rem - 4px);
}

.c0:focus-within button,
.c0:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c0 .c3 {
  color: #262D33;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  aria-current="page"
  bg="#F5F6F7"
  className="c0"
  color="#262D33"
  fontSize="small"
  fontWeight="bold"
>
  <button
    className="c1"
    role="menuitem"
  >
    <div
      className="c2 c3 "
      color="#262D33"
      size={20}
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          Home
        </title>
        <path
          d="M12 5.69l5 4.5V18h-2v-6H9v6H7V10.19l5-4.5zM12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
          fill="currentColor"
        />
      </svg>
    </div>
    who!
  </button>
</li>
`;

exports[`MenuItem - detail 1`] = `
.c1 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  color: #C1C6CC;
  padding-left: 1.25rem;
  margin-left: auto;
  margin-right: 1rem;
  font-size: 0.75rem;
}

.c0 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  padding-left: calc(1rem - 4px);
}

.c0:focus-within button,
.c0:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c0:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c0:hover .c3 {
  color: #C1C6CC;
}

.c0 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  bg="#FFFFFF"
  className="c0"
  color="#4C535B"
  fontSize="small"
  fontWeight="normal"
>
  <button
    className="c1"
    role="menuitem"
  >
    who!
  </button>
  <div
    className="c2"
    color="#C1C6CC"
    fontSize="xsmall"
  >
    Is an excellent question
  </div>
</li>
`;

exports[`MenuItem - icon 1`] = `
.c2 {
  color: #C1C6CC;
  margin-right: 0.5rem;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  padding-left: calc(1rem - 4px);
}

.c0:focus-within button,
.c0:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c0:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c0:hover .c3 {
  color: #C1C6CC;
}

.c0 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  bg="#FFFFFF"
  className="c0"
  color="#4C535B"
  fontSize="small"
  fontWeight="normal"
>
  <button
    className="c1"
    role="menuitem"
  >
    <div
      className="c2 c3 "
      color="#C1C6CC"
      size={20}
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          Beaker
        </title>
        <path
          d="M15.75 4.502a1.249 1.249 0 100-2.5 1.25 1.25 0 100 2.5zM12 5.752a1.25 1.25 0 10-.002-2.501A1.25 1.25 0 0012 5.753zm7.22 15.01c-1.254-2.415-3.47-7.511-3.47-7.511v-5h.625a.626.626 0 000-1.25h-7.5a.626.626 0 000 1.25H9.5v5s-2.168 5.276-3.393 7.633c-.58 1.118-.58 1.118.803 1.118h11.747c.56 0 1.21 0 .565-1.24h-.001zm-8.47-7.51v-5h3.75v5l.535 1.25h-4.793c.3-.733.508-1.25.508-1.25zm6.172 7.5h-8.33c-1.153 0-1.153 0-.67-.957.513-1.015 1.223-2.658 1.803-4.043h5.855c.59 1.338 1.3 2.917 1.814 3.935.536 1.064-.005 1.064-.471 1.064z"
          fill="currentColor"
        />
      </svg>
    </div>
    who!
  </button>
</li>
`;

exports[`MenuItem - with customizations 1`] = `
.c1 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #BFB2FF;
  color: #1E1047;
  font-size: 0.875rem;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  border-left-width: 10px;
  border-left-style: solid;
  border-left-color: #1E1047;
  padding-left: calc(1rem - 10px);
}

.c0:focus-within button,
.c0:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c0 .c2 {
  color: #4F2ABA;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  aria-current="page"
  bg="#BFB2FF"
  className="c0"
  color="#1E1047"
  fontSize="small"
  fontWeight="bold"
>
  <button
    className="c1"
    role="menuitem"
  >
    who!
  </button>
</li>
`;

exports[`MenuItem - with single customization 1`] = `
.c1 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #4F2ABA;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: #262D33;
  padding-left: calc(1rem - 4px);
}

.c0:focus-within button,
.c0:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c0 .c2 {
  color: #262D33;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  aria-current="page"
  bg="#4F2ABA"
  className="c0"
  color="#262D33"
  fontSize="small"
  fontWeight="bold"
>
  <button
    className="c1"
    role="menuitem"
  >
    who!
  </button>
</li>
`;

exports[`MenuItem 1`] = `
.c1 {
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 button,
.c0 a {
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: transparent;
  padding-left: calc(1rem - 4px);
}

.c0:focus-within button,
.c0:focus-within a {
  box-shadow: 0 0 3px 1px #49a9f2;
}

.c0:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c0:hover .c2 {
  color: #C1C6CC;
}

.c0 .c2 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  bg="#FFFFFF"
  className="c0"
  color="#4C535B"
  fontSize="small"
  fontWeight="normal"
>
  <button
    className="c1"
    role="menuitem"
  >
    who!
  </button>
</li>
`;
